--- a/src/main/resources/static/indexEdit.html
+++ b/src/main/resources/static/indexEdit.html
@@ -36,8 +36,14 @@
                         <div class="dish-photo">
                            <img src="styles\images\pizza.jpg">
                         </div>
+                        <div class="upload-file">
+                        </div>
                         <div class="edit-image">
-                           <input type="file" name="image"></input>
+                           <input type="file" name="file" id="upload-input" class="upload-file-input" multiple>
+                           <label class="new-upload-file-input" for="upload-input">
+                              <div class="upload-file-status">файл не выбран</div>
+                              <div class="upload-file-button">Выбрать</div>
+                           </label>
                         </div>
                         <div class="recipe-tags">
                            <div class="tag-content">
