Some extra buttons

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -185,6 +185,10 @@
                      </div>
                   </div>
                </div>
+               <div class="extra-buttons">
+                  <a class="sticker-add-recipe" href="#">Добавить рецепт</a>
+                  <a class="sticker-print-all" href="#">Печать всех рецептов</a>
+               </div>
             </div>
             <div class="list">
                <div class="recipe-box">
