--- a/src/main/resources/static/indexEdit.html
+++ b/src/main/resources/static/indexEdit.html
@@ -7,6 +7,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+      
       <link rel="stylesheet" href="styles\css\basic.css">
       <link rel="stylesheet" href="styles\css\header.css">
       <link rel="stylesheet" href="styles\css\search.css">
@@ -25,16 +26,14 @@
             <div class="list">
                <form action="/edit" enctype="multipart/form-data" method="post">
                   <div class="recipe-box">
-                     <!--
-                        <input type="hidden" value="${recipe.id}" name="id"></input>
-                        --> 
+                        <input type="hidden" value="${recipe.id}" name="id">
                      <div class="recipe-first-part">
                         <div class="dish-name">
                            <textarea type="text" maxlength="50" name="name" placeholder="Название рецепта"></textarea>
                            <div class="name-span"></div>
                         </div>
                         <div class="dish-photo">
-                           <img src="styles\images\pizza.jpg">
+                           <img src="styles\images\demo.jpg">
                         </div>
                         <div class="upload-file">
                         </div>
