.ftl files of messages, button settings for recipe, styles

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
       <link rel="stylesheet" href="styles\css\search.css">
       <link rel="stylesheet" href="styles\css\register.css">
       <link rel="stylesheet" href="styles\css\contentMain.css">
+      <link rel="stylesheet" href="styles\css\tags.css">
       <link rel="stylesheet" href="styles\css\stickers.css">
       <link rel="stylesheet" href="styles\css\barier.css">
       <link rel="stylesheet" href="styles\css\message.css">
@@ -185,14 +186,19 @@
                      </div>
                   </div>
                </div>
-               <div class="extra-buttons">
-                  <a class="sticker-add-recipe" href="#">Добавить рецепт</a>
-                  <a class="sticker-print-all" href="#">Печать всех рецептов</a>
+               <div class="message-add">
+                  <div class="message-add-content">
+                     <div class="message-add-title">Есть идеи для рецепта?</div>
+                     <a class="add-recipe" href="#">Предложить рецепт</a>
+                  </div>
                </div>
             </div>
             <div class="list">
                <div class="recipe-box">
                   <div class="recipe-first-part">
+                
+                         <a class="sticker-edit"></a>
+               
                      <div class="dish-name">
                         <div class="dish-name-content">Food</div>
                         <div class="name-span"></div>
@@ -278,6 +284,14 @@
                      <div class="sticker-show">
                         <a class="sticker-end-content" href="#"></a>
                      </div>
+                  </div>
+               </div>
+               <div class="message-print">
+                  <div class="message-print-image">
+                     <div class="message-print-image-content"></div>
+                  </div>
+                  <div class="message-print-content">
+                     <a class="print-all" href="#">Печать страницы</a>
                   </div>
                </div>
             </div>
