--- a/src/main/resources/static/indexSaved.html
+++ b/src/main/resources/static/indexSaved.html
@@ -13,6 +13,7 @@
       <link rel="stylesheet" href="styles\css\search.css">
       <link rel="stylesheet" href="styles\css\register.css">
       <link rel="stylesheet" href="styles\css\contentSaved.css">
+      <link rel="stylesheet" href="styles\css\tags.css">
       <link rel="stylesheet" href="styles\css\stickers.css">
       <link rel="stylesheet" href="styles\css\barier.css">
       <link rel="stylesheet" href="styles\css\message.css">
