Add .ftl files of editing buttons, styles
Add .ftl files of editing buttons, styles and link to tags.css

--- a/src/main/resources/static/indexEdit.html
+++ b/src/main/resources/static/indexEdit.html
@@ -90,8 +90,13 @@
                            </div>
                            <textarea type="text" name="ingredients" placeholder="Введите ингредиенты"></textarea>
                         </div>
-                        <div class="save-edit">
-                           <button type="submit">Сохранить</button>
+                        <div class="edit-buttons">
+                           <div class="edit-buttons-content">
+                              <button class="save-recipe" type="submit">Удалить</button>
+                           </div>
+                           <div class="edit-buttons-content">
+                              <button class="delete-recipe" type="submit">Сохранить</button>
+                           </div>
                         </div>
                      </div>
                   </div>
