--- a/src/main/resources/static/indexEdit.html
+++ b/src/main/resources/static/indexEdit.html
@@ -92,11 +92,12 @@
                         </div>
                         <div class="edit-buttons">
                            <div class="edit-buttons-content">
-                              <button class="save-recipe" type="submit">Удалить</button>
+                              <a class="delete-recipe" type="submit">Удалить</a>
                            </div>
                            <div class="edit-buttons-content">
-                              <button class="delete-recipe" type="submit">Сохранить</button>
+                              <button class="save-recipe" type="submit">Сохранить</button>
                            </div>
+                           
                         </div>
                      </div>
                   </div>
